--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,17 @@ services:
   db_image:
     build: ./db
     container_name: db_image
-    user: postgres
     restart: always
     ports:
-      - 5432:5432
+      - ${DB_PORT}:5432
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_DB: db_main
-      POSTGRES_PASSWORD: qwerty123
-      POSTGRES_HOST_AUTH_METHOD: "scram-sha-256\nhost replication all 0.0.0.0/0 md5"
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_DB: ${DB_DATABASE}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_HOST_AUTH_METHOD: "scram-sha-256\nhost replication ${DB_REPL_USER} 0.0.0.0/0 md5"
       POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
     command: |
-      postgres 
+      postgres
       -c wal_level=replica 
       -c max_wal_senders=10 
       -c wal_log_hints=on 
@@ -38,13 +37,13 @@ services:
     user: postgres
     restart: always
     ports:
-      - 5433:5432
+      - ${DB_REPL_PORT}:5432
     environment:
-      PGUSER: repl_user
-      PGPASSWORD: qwerty123
+      PGUSER: ${DB_REPL_USER}
+      PGPASSWORD: ${DB_REPL_PASSWORD}
     command: |
       bash -c "
-      until pg_basebackup --pgdata=/var/lib/postgresql/data -R --slot=replication_slot --host=db_image --port=5432
+      until pg_basebackup --pgdata=/var/lib/postgresql/data -R --slot=replication_slot --host=db_image --port=${DB_PORT}
       do
       echo 'Waiting for primary to connect...'
       sleep 1s
