--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.8'
 services:
   bot_image:
-    build:
-      context: .
-      dockerfile: bot/Dockerfile
+    build: ./bot
     container_name: bot_image
+    env_file:
+      - .env
     restart: always
     volumes:
-      - ./bot/app.log:/app/app.log
+      - ./db/:/db/
 
   db_image:
     build: ./db
@@ -30,6 +30,11 @@ services:
       -c archive_mode=on 
       -c archive_command='cp %p /oracle/pg_data/archive/%f'
       -c log_replication_commands=on
+      -c logging_collector=on
+      -c log_directory='/var/log/postgresql'
+      -c log_filename='postgresql.log'
+    volumes:
+      - ./db:/var/log/postgresql
 
   db_repl_image:
     build: ./db_repl
