Configured db requests by domain

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     env_file:
       - .env
     restart: always
+    depends_on: 
+      - db_image
     volumes:
-      - ./db/:/var/log/postgresql/
-    networks:
-      - net
+      - /tmp/:/var/log/postgresql/
 
   db_image:
     build: ./db
@@ -36,10 +36,7 @@ services:
       -c log_directory='/var/log/postgresql'
       -c log_filename='postgresql.log'
     volumes:
-      - ./db:/var/log/postgresql
-    networks:
-      net:
-        ipv4_address: ${DB_HOST}
+      - /tmp/:/var/log/postgresql
 
   db_repl_image:
     build: ./db_repl
@@ -64,12 +61,3 @@ services:
       "
     depends_on:
       - db_image
-    networks:
-      net:
-        ipv4_address: ${DB_REPL_HOST}
-
-networks:
-  net:
-    ipam:
-      config:
-        - subnet: ${DOCKER_SUBNET}
